2010-03-08  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=30895
        [Gtk] The accessible hierarchy of tables is significantly incorrect for Atk

        * platform/gtk/accessibility/table-hierarchy.html:
        * platform/gtk/accessibility/table-hierarchy-expected.txt:

2010-03-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Nate Chapin.

        [V8] Block popups from inline script
        https://bugs.webkit.org/show_bug.cgi?id=35474

        Test that we block popups generated from <script>window.open(...)</script>.

        * http/tests/security/popup-blocked-from-window-open-expected.txt: Added.
        * http/tests/security/popup-blocked-from-window-open.html: Added.

2010-03-08  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders Carlsson.

        Relax the 3rd party cookie policy in cases where it won't add a new tracking vector.
        <rdar://problem/7163012> and https://bugs.webkit.org/show_bug.cgi?id=35824

        * http/tests/cookies/resources/cookie-utility.php: Added.
        * http/tests/cookies/resources/third-party-cookie-relaxing-iframe.html: Added.
        * http/tests/cookies/third-party-cookie-relaxing-expected.txt: Added.
        * http/tests/cookies/third-party-cookie-relaxing.html: Added.

        * platform/gtk/Skipped:
        * platform/qt/Skipped:

2010-03-08  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitry Titov.

        Blob.slice support.
        https://bugs.webkit.org/show_bug.cgi?id=32993

        Add a new layout test to test slicing and sending a file. In addition,
        two new scripts are introduced to create and touch the temp file.

        Move some code from send-dragged-file.js to a new file
        setup-file-input-element-for-drag.js so that it can be used by both
        send-dragged-file.js and send-sliced-dragged-file.js to setup the input
        element for the file dragging.
