@@ -784,3 +784,6 @@ fast/events/spatial-navigation
 
 # <rdar://problem/7718442> Implement 'preload=none'
 media/video-preload.html
+
+# For some reason crashes when run with all tests. Passes individually.
+fast/forms/multiple-form-submission-protection-mouse.html
